manifests/09_network-policy-cso-allow-ingress-to-operator-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-ingress-to-operator-metrics
 namespace: openshift-cluster-storage-operator
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.operator-metrics: allow
 ingress:
 - ports:
   - protocol: TCP
     port: 8443
   - protocol: TCP
     port: 8444
 policyTypes:
 - Ingress
